--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "EagleLizard",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@types/node": "^8.0.31",
+    "drawille": "^1.1.0"
+  }
 }
